--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ src/include/status.h
 src/include/trace.h
 src/include/type.h
 src/kernel/data/access.data
+src/usr/System/data/
+**/.idea
+**/.vscode
