--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ src/include/status.h
 src/include/trace.h
 src/include/type.h
 src/kernel/data/access.data
-src/usr/System/data/
+src/**/data/
+nkcloud.dgd
 **/.idea
 **/.vscode
