More complex functionality Add log1p kfun Make rational accept numbers Clean up naming

--- a/extensions/Makefile
+++ b/extensions/Makefile
@@ -11,8 +11,15 @@ LDFLAGS=-shared $(DEBUG)
 EXTMOD=../../lpc-ext/src
 OBJ=$(EXTMOD)/lpc_ext.o
 PERL=.
+MATH=.
 
-all:	perl_kfuns.$(EXT)
+all:	math_kfuns.$(EXT) perl_kfuns.$(EXT)
+
+$(MATH)/math_kfuns.o:	$(MATH)/math_kfuns.c $(EXTMOD)/lpc_ext.h
+	$(CC) -o $@ -c $(CFLAGS) -I$(EXTMOD) -Wall $(MATH)/math_kfuns.c
+
+math_kfuns.$(EXT):	$(MATH)/math_kfuns.o $(OBJ)
+	$(LD) -o $@ $(LDFLAGS) -lm $+
 
 $(PERL)/perl_kfuns.o:	$(PERL)/perl_kfuns.c $(EXTMOD)/lpc_ext.h
 	$(CC) -o $@ -c $(CFLAGS) -I$(EXTMOD) -Wall `perl -MExtUtils::Embed -e ccopts` $(PERL)/perl_kfuns.c
